--- a/HW5/HW5/Views/Home/Create.cshtml
+++ b/HW5/HW5/Views/Home/Create.cshtml
@@ -12,53 +12,59 @@
             <p><strong>NOTE: </strong>
             ALL information is REQUIRED to change your address.</p><br />
 
+            <!--Customer Name, Field Name: name-->
+            <label for="Name" style="margin-left:15px">Full Legal Name (First, Last & Middle)</label><br />
+            <input type="text" name="Name" value="" style="width:250px; margin-left:15px" /> <br />
+
             <!--Customer ID, Field Name: id-->
             <div class="col-md-4">
-                <label for="id">ODL / Permit / ID / Customer # </label><br />
-                <input type="text" name="id" value="" /><br />
+                <label for="Id">ODL / Permit / ID / Customer # </label><br />
+                <input type="text" name="Id" value="" style="width:100px" /><br />
             </div>
 
             <!--Customer DOB, Field Name: dob-->
             <div class="col-md-4">
-                <label for="dob">Date of Birth</label><br />
-                <input type="date" name="dob" value="" style="width:120px" /><br />
+                <label for="Dob">Date of Birth</label><br />
+                <input type="date" name="Dob" value="" style="width:120px" /><br />
             </div>
 
-            <!--Customer Name, Field Name: name-->
-            <label for="name" style="margin-left:15px">Full Legal Name (First, Last & Middle)</label><br />
-            <input type="text" name="name" value="" style="width:250px; margin-left:15px"/> <br />
-
-            <p style="margin-left:15px"><strong>NEW RESIDENCE ADDRESS</strong>
-            (No Post Office Box Number or mail forwarding address)</p>
+            <div style="padding-top:70px">
+                <p style="margin-left:15px">
+                    <strong>NEW RESIDENCE ADDRESS</strong><br />
+                    (No Post Office Box Number or mail forwarding address)
+                </p>
+            </div>
 
             <!--Customer Address, Field Name: street-->
-            <label for="street" style="margin-left:15px">New Address</label><br />
-            <input type="text" name="street" value="" style="width:250px; margin-left:15px"/><br />
+            <label for="Street" style="margin-left:15px">New Address</label><br />
+            <input type="text" name="Street" value="" style="width:250px; margin-left:15px"/><br />
 
             <!--Customer Address, Field Name: city-->
-            <div class="col-md-3">
-                <label for="city">City</label><br />
-                <input type="text" name="city" value="" style="width:120px"/><br />
+            <div class="col-md-4">
+                <label for="City">City</label><br />
+                <input type="text" name="City" value="" style="width:120px"/><br />
             </div>
             
             <!--Customer Address, Field Name: state-->
-            <div class="col-md-2">
-                <label for="state">State</label><br />
-                <input type="text" name="state" value="" style="width:40px"/><br />
+            <div class="col-md-5">
+                <label for="StateCode">State Code</label><br />
+                <input type="text" name="StateCode" value="" style="width:40px"/><br />
             </div>
             
             <!--Customer Address, Field Name: zip-->
-            <div class="col-md-2">
-                <label for="zip">Zip Code</label><br />
-                <input type="text" name="zip" value="" style="width:80px"/><br />
+            <div class="col-md-4">
+                <label for="ZipCode">Zip Code</label><br />
+                <input type="text" name="ZipCode" value="" style="width:80px"/><br />
             </div>
             
             <!--Customer Address, Field Name: county-->
-            <div class="col-md-2">
-                <label for="county">County</label><br />
-                <input type="text" name="county" value="" style="width:120px" /><br />
+            <div class="col-md-4">
+                <label for="County">County</label><br />
+                <input type="text" name="County" value="" style="width:120px" /><br />
             </div>
-            <input type="submit" name="submit" value="Submit"/>
+            <div class="col-md-12" style="clear:both; padding-top: 20px">
+                <input type="submit" name="submit" value="Submit" />
+            </div>
         </form>
 </div>
 
