Fixed file tree issues, Submission now works but Create has issues.

--- a/HW5/HW5/Views/Home/Home.cshtml
+++ b/HW5/HW5/Views/Home/Home.cshtml
@@ -7,8 +7,8 @@
 
 <div>
     <ul>
-        <li>@Html.ActionLink("Submissions", "Index", "Home/Submissions")</li>
-        <li>@Html.ActionLink("Create Request", "Index", "Home/Create")</li>
+        <li>@Html.ActionLink("Submissions", "Index", "Customer/Submissions")</li>
+        <li>@Html.ActionLink("Create Request", "Index", "Customer/Create")</li>
     </ul>
 </div>
 
