--- a/homework6/homework6/Views/Product/Browse.cshtml
+++ b/homework6/homework6/Views/Product/Browse.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Browse";
 }
 
-<!--Navigation-->
+<!--Navigation, Same as Index-->
 <div class="col-md-12">
     <p>
         @foreach (var item in Model.ProductCategoriesName)
@@ -27,7 +27,10 @@
 
 @if (ViewBag.SubID != null)
 {
+    <!--Display Pane for Browsable Products-->
     <h1 class="text-center page-header text-info">Browse Products</h1>
+        
+    <!--For Each loop to go over Products - takes only the first ten-->
     foreach (var item in Model.Product.Skip(0).Take(10))
     {
     <div class="col-sm-4" style="text-align:center; padding-bottom:25px;">
@@ -43,6 +46,8 @@
         </figure>
     </div>
     }
+    
+    <!--Numeric Pagination Display-->
     <div class="col-lg-12" style="clear:both; text-align:center;">
         <ul class="pagination pagination-lg">
             <li><a href="#">«</a></li>
