--- a/HW8/HW8/Views/Shared/_Layout.cshtml
+++ b/HW8/HW8/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             <p>&copy; @DateTime.Now.Year - Art Gallery</p>
         </footer>
     </div>
-
+    @Scripts.Render("~/Scripts/AjaxRequest.js")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
