--- a/HW7/HW7/HW7/Views/Shared/_Layout.cshtml
+++ b/HW7/HW7/HW7/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
+    @Scripts.Render("~/Scripts/webAPI.js")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
