Javascript now returns an error, so thats... something.

--- a/HW8/HW8/Views/Artists/Index.cshtml
+++ b/HW8/HW8/Views/Artists/Index.cshtml
@@ -19,3 +19,8 @@
         <table id="list"></table>
     </div>
 }
+
+@section PageScripts
+{
+    <script type="text/javascript" src="~/Scripts/AjaxRequest.js"></script>
+}
