More attempts made, more attempts failed, seeking help.

--- a/HW8/HW8/Views/Artists/Index.cshtml
+++ b/HW8/HW8/Views/Artists/Index.cshtml
@@ -14,8 +14,10 @@
     <h2>Welcome to the Artist Gallery</h2>
 </div>
 
-<p>Feel free to browse our miniscule number of artist's and their works by any of our navigation links OR by 
-    clicking on the Genre buttons below.</p>
+<p>
+    Feel free to browse our miniscule number of artist's and their works by any of our navigation links OR by
+    clicking on the Genre buttons below.
+</p>
 
 @foreach (var item in Model)
 {
