--- a/HW8/HW8/Views/Artists/Artworks.cshtml
+++ b/HW8/HW8/Views/Artists/Artworks.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<HW8.Models.Artwork>
 
 @{
-    ViewBag.Title = "Artwork";
+    ViewBag.Title = "Artworks";
 }
 
-<h2>Artwork</h2>
+<h2>Artworks</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
