--- a/HW8/HW8/Views/Artists/Classifications.cshtml
+++ b/HW8/HW8/Views/Artists/Classifications.cshtml
@@ -29,9 +29,9 @@
             @Html.DisplayFor(modelItem => item.Genre.Name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ClassID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ClassID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ClassID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.ClassificationID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.ClassificationID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.ClassificationID })
         </td>
     </tr>
 }
