Completed except for Genre return.

--- a/HW8/HW8/Views/Classifications/Index.cshtml
+++ b/HW8/HW8/Views/Classifications/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<HW8.Models.Classification>
 
 @{
-    ViewBag.Title = "Classifications";
+    ViewBag.Title = "Index";
 }
 
-<h2>Classifications</h2>
+<h2>Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
