--- a/HW8/HW8/Views/Shared/_Layout.cshtml
+++ b/HW8/HW8/Views/Shared/_Layout.cshtml
@@ -20,10 +20,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Artists")</li>
-                    <li>@Html.ActionLink("Artists", "Artists", "Artists")</li>
-                    <li>@Html.ActionLink("Artworks", "Artwork", "Artists")</li>
-                    <li>@Html.ActionLink("Classifications", "Classifications", "Artists")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Artists", "Index", "Artists")</li>
+                    <li>@Html.ActionLink("Artworks", "Index", "Artworks")</li>
+                    <li>@Html.ActionLink("Classifications", "Index", "Classifications")</li>
                 </ul>
             </div>
         </div>
