--- a/HW8/HW8/Views/Artists/Create.cshtml
+++ b/HW8/HW8/Views/Artists/Create.cshtml
@@ -29,6 +29,10 @@
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
+            @if (ViewBag.Error2 != null)
+            {
+                <p style="color:crimson;"> @ViewBag.Error2 </p>
+            }
         </div>
 
         <div class="form-group">
@@ -37,6 +41,10 @@
                 @Html.EditorFor(model => model.Birthdate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Birthdate, "", new { @class = "text-danger" })
             </div>
+            @if (ViewBag.Error != null)
+            {
+                <p style="color:crimson;"> @ViewBag.Error </p>
+            }
         </div>
 
         <div class="form-group">
