--- a/HW8/HW8/Views/Artists/Index.cshtml
+++ b/HW8/HW8/Views/Artists/Index.cshtml
@@ -1,28 +1,52 @@
-﻿@model IEnumerable<HW8.Models.Genre>
+﻿@model IEnumerable<HW8.Models.Artist>
 
 @{
     ViewBag.Title = "Index";
 }
 
-@section PageScripts
-{
-    <script type="text/javascript" src="~/Scripts/AjaxRequest.js"></script>
-}
-
-
-<div class="jumbotron" style="text-align:center; color:white; background-color:darkgray;">
-    <h2>Welcome to the Artist Gallery</h2>
-</div>
+<h2>Artists</h2>
 
 <p>
-    Feel free to browse our miniscule number of artist's and their works by any of our navigation links OR by
-    clicking on the Genre buttons below.
+    @Html.ActionLink("Create New", "Create")
 </p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Birthdate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BirthCountry)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BirthCity)
+        </th>
+        <th></th>
+    </tr>
 
-@foreach (var item in Model)
-{
-    <div class="col-sm-3">
-        <button class="btn-group" onclick="callFunction('@item.GenreID');">@Html.DisplayFor(model => item.Name)</button>
-        <table id="list"></table>
-    </div>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Birthdate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BirthCountry)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BirthCity)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ArtistID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ArtistID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ArtistID })
+            </td>
+        </tr>
+    }
+
+</table>
