--- a/HW8/HW8/Views/Artworks/Index.cshtml
+++ b/HW8/HW8/Views/Artworks/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<HW8.Models.Artwork>
 
 @{
-    ViewBag.Title = "Artworks";
+    ViewBag.Title = "Index";
 }
 
-<h2>Artworks</h2>
+<h2>Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
